# whisper

./: .gitignore  README.md  pyproject.toml
data/output/: CAP 10 to MVP 01.txt
src/: env_config.py  langchain_utils.py  main_local.py  main_remote.py  p_meeting_recap.py  p_meeting_recap_use_cases.py
