[tool.poetry]
name = "whisper"
version = "0.1.0"
description = ""
authors = ["José Gregorio Argomedo <gargomedo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.35.7"
anthropic = "^0.25.8"
langchain = "^0.2.6"
python-dotenv = "^1.0.1"
langchain-openai = "^0.1.13"
langchain-anthropic = "^0.1.11"
pydub = "^0.25.1"
pydantic = "^2.7.0"
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
